caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/expects_with_requires.caffeine
Expectations for "test"
  "item":
    Requiring { env: String }
    Provides { value: "x" }
